Fix #73 double scrollbar

--- a/src/app/components/double-elimination-bracket/double-elimination-bracket.component.scss
+++ b/src/app/components/double-elimination-bracket/double-elimination-bracket.component.scss
@@ -1,6 +1,7 @@
 .bracket-container {
   width: 100%;
-  overflow: auto;
+  overflow-y: hidden;
+  overflow-x: auto;
 }
 
 .actions {
